supports bind parameter

--- a/apb/Dockerfile
+++ b/apb/Dockerfile
@@ -1,11 +1,15 @@
 FROM ansibleplaybookbundle/apb-base
 
 LABEL "com.redhat.apb.spec"=\
-"dmVyc2lvbjogMS4wCm5hbWU6IHZhdWx0LWFwYgpkZXNjcmlwdGlvbjogVGhpcyBpcyBhIHNhbXBs\
-ZSBhcHBsaWNhdGlvbiBnZW5lcmF0ZWQgYnkgYXBiIGluaXQKYmluZGFibGU6IFRydWUKYXN5bmM6\
-IG9wdGlvbmFsCm1ldGFkYXRhOgogIGRpc3BsYXlOYW1lOiB2YXVsdApwbGFuczoKICAtIG5hbWU6\
-IGRlZmF1bHQKICAgIGRlc2NyaXB0aW9uOiBUaGlzIGRlZmF1bHQgcGxhbiBkZXBsb3lzIHZhdWx0\
-LWFwYgogICAgZnJlZTogVHJ1ZQogICAgbWV0YWRhdGE6IHt9CiAgICBwYXJhbWV0ZXJzOiBbXQo="
+"dmVyc2lvbjogMS4wCm5hbWU6IHZhdWx0LWFwYgpkZXNjcmlwdGlvbjogRGVwbG95cyBoYXNoaWNv\
+cnAgdmF1bHQgd2l0aCBhIHNpbmdsZSBrZXkKYmluZGFibGU6IFRydWUKYXN5bmM6IG9wdGlvbmFs\
+Cm1ldGFkYXRhOgogIGRpc3BsYXlOYW1lOiB2YXVsdApwbGFuczoKICAtIG5hbWU6IENBCiAgICBk\
+ZXNjcmlwdGlvbjogVGhpcyBwbGFuIGlzc3VlcyBUTFMgY2VydGlmaWNhdGVzIGR1cmluZyBiaW5k\
+LCBhbGwgc2lnbmVkIGJ5IHRoZSBzYW1lIENBLgogICAgZnJlZTogVHJ1ZQogICAgbWV0YWRhdGE6\
+IHt9CiAgICBwYXJhbWV0ZXJzOiBbXQogICAgYmluZF9wYXJhbWV0ZXJzOgogICAgICAtIG5hbWU6\
+IGNvbW1vbl9uYW1lCiAgICAgICAgdGl0bGU6IENvbW1vbiBOYW1lCiAgICAgICAgdHlwZTogc3Ry\
+aW5nCiAgICAgICAgZGlzcGxheV90eXBlOiB0ZXh0CiAgICAgICAgcmVxdWlyZWQ6IFRydWUKICAg\
+IAo="
 
 
 
